--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,7 @@ title: About Us
                 <ul>
                     <div class="mobile" id="myMobile">
                         <li><a href="{{site.baseurl}}/">Home</a></li>
-                        <li><a href="about_us/" style="text-decoration: underline;">About Us</a></li>
+                        <li><a href="about-us" style="text-decoration: underline;">About Us</a></li>
                         <li><a href="{{site.baseurl}}/#services">Our Services</a></li>
                         <li><a href="blog.html">Blog</a></li>                
                         <div class="links">
