--- a/web-design.html
+++ b/web-design.html
@@ -22,19 +22,35 @@ title: Web Design
             <li>We’ll work with you so you are satisfied with what we make</li>
             <li>We're kind of nice :)</li>
         </ul>
-        <a href="#learn-more" class="button">Get In Touch</a>
+        <a href="#the-cost" class="button">The Cost?</a>
         <img src="assets/Images/logo-white.png">
     </div>    
 </section>
 
-<section class="price">
-    <div class="service-text">
+<section class="price" id="the-cost">
+    <div class="service-text price-text">
         <h1><span class="underline">PRICING</span></h1>
         <hr>
         <h2>$1000<br>FULL PROFESSIONAL SITE</h2>
         <p>Get a 15 page website of the highest quality in less than 3 weeks. We’ll also set you up with basic Search Engine Optimization so ensure your clients can find you on Google. All website analytics will be provided to you after for you to track your visitors. Your business will also be featured on Google Maps. If you are selling products, consider those added and ready for purchase.  We’ll even write a blog post for you so you can really speak to your clients. After you are satisfied with your site we will also make sure you know how to make simple changes to your site with a 1.5 hour tutorial session + 30 minute analytics tutorial . </p>
         <hr>
+        <div class="price-box left">
+            <h2>$500<br>BUSINESS SITE</h2>
+            <P>Get a 10 page beautiful website in less than 2 weeks. We’ll also set you up with basic Search Engine Optimization so ensure your clients can find you on Google. All website analytics will be provided to you after for you to track your visitors. Your business will also be featured on Google Maps. And to get you started we will also add 15 products on the site for you to go live right away.  After you are satisfied with your site we will also make sure you know how to make simple changes to your site with a 1 hour tutorial session. </P>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="price-box right">
+            <h2>$300<br>BASIC SITE</h2>
+            <P>Get a simple 5 page website in less than 2 weeks. We’ll also set you up with basic Search Engine Optimization so ensure your clients can find you on Google. All website analytics will be provided to you after for you to track your visitors. After you are satisfied with your site we will also make sure you know how to make simple changes to your site with a 1 hour tutorial session. </P>
+        </div>
+        <hr>
+        <h3>No photos? No worries, all our plans include free custom icons and HD copyrighted stock photos to populate your site. All websites will be mobile responsive and work beautifully on all screens. </h3>
+        <p>*We develop websites on Squarespace. The client is expected to cover hosting costs. Working with ONYX Online will grant you 50% off your first year of hosting on Squarespace.</p>
+        <a href="#contact" class="button">Get In Touch</a>
     </div>
 
 </section>
 
+{% include contact.html %}
