--- a/index.html
+++ b/index.html
@@ -20,37 +20,37 @@ title: Home
         <!--The fancy picture section-->
         <div class="reposition" id="services">
             <div class="gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/Web-Design.png" alt="Web Design" style="width:100%">
+                <a href="web-design"><img src="{{site.baseurl}}/assets/Images/Web-Design.png" alt="Web Design" style="width:100%">
                 </a>
             </div>
         </div>
         <div class="reposition">
             <div class="gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/2.png" alt="SEO" style="width:100%">
+                <a href="seo"><img src="{{site.baseurl}}/assets/Images/2.png" alt="SEO" style="width:100%">
                 </a>
             </div>
         </div>
         <div class="reposition">
             <div class="gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/3.png" alt="Social Media Ads" style="width:100%">
+                <a href="social-media-ads"><img src="{{site.baseurl}}/assets/Images/3.png" alt="Social Media Ads" style="width:100%">
                 </a>
             </div>
         </div>
         <div class="reposition">
             <div class="gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/4.png" alt="Social Media Strategy" style="width:100%">
+                <a href="social-media-strategy"><img src="{{site.baseurl}}/assets/Images/4.png" alt="Social Media Strategy" style="width:100%">
                 </a>
             </div>
         </div>
         <div class="reposition">
             <div class="gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/5.png" alt="Media Production" style="width:100%">
+                <a href="media-production"><img src="{{site.baseurl}}/assets/Images/5.png" alt="Media Production" style="width:100%">
                 </a>
             </div>
         </div>
         <div class="reposition">
             <div class="gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/6.png" alt="Google Ads" style="width:100%">
+                <a href="google-ads"><img src="{{site.baseurl}}/assets/Images/6.png" alt="Google Ads" style="width:100%">
                 </a>
             </div>
         </div>
@@ -63,22 +63,22 @@ title: Home
             <div class="title">RECENT WORK:</div>
 
             <div class="website-gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/uottawa+designanathon.png" alt="Designation site" style="width:100%">
+                <a href="https://www.uottawadesignleague.ca/"><img src="{{site.baseurl}}/assets/Images/uottawa+designanathon.png" alt="Designation site" style="width:100%">
                 </a>
                 <div class="description">Designation</div>
             </div>
             <div class="website-gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/cvuo.png" alt="CVUO site" style="width:100%">
+                <a href="https://cvuo.ca/"><img src="{{site.baseurl}}/assets/Images/cvuo.png" alt="CVUO site" style="width:100%">
                 </a>
                 <div class="description">CVUO</div>
             </div>
             <div class="website-gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/mess.png" alt="MESS site" style="width:100%">
+                <a href="https://mess-segm.ca/"><img src="{{site.baseurl}}/assets/Images/mess.png" alt="MESS site" style="width:100%">
                 </a>
                 <div class="description">MESS-SEGM</div>
             </div>
             <div class="website-gallery">
-                <a href="#"><img src="{{site.baseurl}}/assets/Images/uottawa+mpsp.png" alt="MPSP site" style="width:100%">
+                <a href="https://uottawampsp.com/"><img src="{{site.baseurl}}/assets/Images/uottawa+mpsp.png" alt="MPSP site" style="width:100%">
                 </a>
                 <div class="description">uOttawa MPSP</div>
             </div>
@@ -87,38 +87,8 @@ title: Home
             <div class="white-space"></div>
         </section>
 
+{%include contact.html %}
 
-        <!--Contact Section-->
-        <section class="get-in-touch" id="contact">
-            <div class="form-text">
-                <span style="font-size:2rem">GET IN TOUCH.</span>
-                <h3>Let’s take the first steps together and we’ll turn your business into an online sensation. Fill out the form and our best people will reach out to you and we can start walking together on the beautiful road of success.</h3>
-            </div>
-
-            <div class="form-container">
-                <form action="/action_page.php">
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname">
-
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname">
-
-                    <label for="cname">COMPANY NAME</label>
-                    <input type="text" id="cname" name="companyname">
-
-                    <label for="email">EMAIL</label>
-                    <input type="text" id="email" name="email">
-
-                    <label for="website">COMPANY WEBSITE</label>
-                    <input type="text" id="website" name="website" placeholder="(If you have one, otherwise that's what we're here for)">
-
-                    <label for="message">MESSAGE</label>
-                    <textarea id="message" name="message" placeholder="Brief us on what you're looking for and your expectations. Or even tell us your best joke." style="height:74px"></textarea>
-                    <input type="submit" value="Send">
-                </form>                
-            </div>
-
-        </section>
 
 
 
