--- a/about-us.html
+++ b/about-us.html
@@ -57,36 +57,6 @@ title: About Us
 
        
 
+        {%include contact.html %}
 
-        <!--Contact Section-->
-        <section class="get-in-touch" id="contact">
-            <div class="form-text">
-                <span style="font-size:2rem">GET IN TOUCH.</span>
-                <h3>Let’s take the first steps together and we’ll turn your business into an online sensation. Fill out the form and our best people will reach out to you and we can start walking together on the beautiful road of success.</h3>
-            </div>
-
-            <div class="form-container">
-                <form action="/action_page.php">
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname">
-
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname">
-
-                    <label for="cname">COMPANY NAME</label>
-                    <input type="text" id="cname" name="companyname">
-
-                    <label for="email">EMAIL</label>
-                    <input type="text" id="email" name="email">
-
-                    <label for="website">COMPANY WEBSITE</label>
-                    <input type="text" id="website" name="website" placeholder="(If you have one, otherwise that's what we're here for)">
-
-                    <label for="message">MESSAGE</label>
-                    <textarea id="message" name="message" placeholder="Brief us on what you're looking for and your expectations. Or even tell us your best joke." style="height:74px"></textarea>
-                    <input type="submit" value="Send">
-                </form>                
-            </div>
-
-        </section>
 
