--- a/_posts/2020-01-11-1.html
+++ b/_posts/2020-01-11-1.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Creating CVUO's Massive Site
+image: /assets/Images/Creating+CVUO's+Massive+Site++2+-+ONYX+-+Websites+-+Ottawa.png
+description: A large project with over a thousand different pages and 20 different unique designs. Lots of challenges to overcome here to make a beautiful and accessible website.
 ---
 
 <p>Campus Vibez uOttawa, also known as CVUO, is an organization that operates at the University of Ottawa. Their website was meant to give students access to multiple resources, as well as act as a place for blogging, event promotions, and a giant list of items each with their own descriptions, pictures, descriptions and links. The site would have more than a thousand different pages and over 20 different unique designs.</p>
