--- a/_posts/2020-05-23-2.html
+++ b/_posts/2020-05-23-2.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: How to get Frosted Buttons - SquareSpace Tutorial
+image: /assets/Images/Frosted+Button+Tutorial+-+ONYX+-+Websites+-+Ottawa.gif
+description: A very simple and quick tutorial on how to get Frosted Buttons on your Squarespace site for free. Works for all versions and templates of Squarespace.
 ---
 
 <p>This is a simple and very popular effect that you can add to your Squarespace sites. It will work for any 7.0 template and also for the newer 7.1 version as it is pretty much just a simple Custom CSS tweak. </p>
