--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@ title: Blog
 
     
         {% for post in site.posts %}
-            <a href="{{ post.url }}">
+            <a href="{{ site.baseurl }}{{ post.url }}">
                 <div class="blog-link">
                     <img src="{{ post.image | prepend: site.baseurl }}">
                     <h2>{{ post.title }}</h2>      
