--- a/google-ads.html
+++ b/google-ads.html
@@ -23,7 +23,7 @@ title: Google Ads
             <li>Something tells me we’re going to get along (:</li>
         </ul>
         <a href="#the-cost" class="button">The Cost?</a>
-        <img src="assets/Images/logo-white.png">
+        <img src="/onyxonline/assets/Images/OnyxOnline_Icon+white (1).png">
     </div>    
 </section>
 
@@ -61,6 +61,7 @@ title: Google Ads
         </div>
 
         <div class="line"></div>
+        <div class="mobile-line"><hr></div>
 
         <div class="price-box">
             <h2>$500/MONTH<br>BASIC SOLUTION</h2>
