--- a/seo.html
+++ b/seo.html
@@ -23,7 +23,7 @@ title: SEO
             <li>You’ll love working with us &lt;3</li>
         </ul>
         <a href="#the-cost" class="button">The cost?</a>
-        <img src="assets/Images/logo-white.png">
+        <img src="/onyxonline/assets/Images/OnyxOnline_Icon+white (1).png">
     </div>    
 </section>
 
@@ -66,6 +66,7 @@ title: SEO
         </div>
 
         <div class="line"></div>
+        <div class="mobile-line"><hr></div>
 
         <div class="price-box">
             <h2>$50/MONTH<br>BASIC PACKAGE</h2>
