--- a/web-design.html
+++ b/web-design.html
@@ -23,7 +23,7 @@ title: Web Design
             <li>We're kind of nice :)</li>
         </ul>
         <a href="#the-cost" class="button">The Cost?</a>
-        <img src="assets/Images/logo-white.png">
+        <img src="/onyxonline/assets/Images/OnyxOnline_Icon+white (1).png">
     </div>    
 </section>
 
@@ -40,6 +40,7 @@ title: Web Design
         </div>
 
         <div class="line"></div>
+        <div class="mobile-line"><hr></div>
 
         <div class="price-box right">
             <h2>$300<br>BASIC SITE</h2>
