--- a/social-media-strategy.html
+++ b/social-media-strategy.html
@@ -23,7 +23,7 @@ title: Social Media strategy
             <li>We’re fun :D</li>
         </ul>
         <a href="#the-cost" class="button">The Cost?</a>
-        <img src="assets/Images/logo-white.png">
+        <img src="/onyxonline/assets/Images/OnyxOnline_Icon+white (1).png">
     </div>    
 </section>
 
@@ -60,6 +60,7 @@ title: Social Media strategy
         </div>
 
         <div class="line"></div>
+        <div class="mobile-line"><hr></div>
 
         <div class="price-box">
             <h2>$100/MONTH<br>BASIC SOLUTION</h2>
