added new recent work

--- a/index.html
+++ b/index.html
@@ -63,24 +63,39 @@ title: Home
             <div class="title">RECENT WORK:</div>
 
             <div class="website-gallery">
+                <a href="https://www.35mm.website/"><img src="{{site.baseurl}}/assets/Images/35mm.jpg" alt="35mm" style="width:100%">
+                </a>
+                <div class="description">35mm</div>
+                <div class="description-text">A photo gallery of travelling through Vietnam </div>
+            </div><div class="website-gallery">
+                <a href="https://sprout-pear-z7x6.squarespace.com/"><img src="{{site.baseurl}}/assets/Images/ThatMakerGirl.jpg" alt="ThatMakerGirl" style="width:100%">
+                </a>
+                <div class="description">That Maker Girl</div>
+                <div class="description-text">Storefront bringing local handmade business logos and art ideas to life</div>
+            </div>
+            <div class="website-gallery">
                 <a href="https://www.uottawadesignleague.ca/"><img src="{{site.baseurl}}/assets/Images/uottawa+designanathon.png" alt="Designation site" style="width:100%">
                 </a>
                 <div class="description">Designation</div>
+                <div class="description-text">An event for a 3-day University of Ottawa student event</div>
             </div>
             <div class="website-gallery">
                 <a href="https://cvuo.ca/"><img src="{{site.baseurl}}/assets/Images/cvuo.png" alt="CVUO site" style="width:100%">
                 </a>
                 <div class="description">CVUO</div>
+                <div class="description-text">The massive clubs portal for the University of Ottawa</div>
             </div>
             <div class="website-gallery">
-                <a href="https://mess-segm.ca/"><img src="{{site.baseurl}}/assets/Images/mess.png" alt="MESS site" style="width:100%">
+                <a href="https://mess-segm.ca/"><img src="{{site.baseurl}}/assets/Images/mess.jpg" alt="MESS site" style="width:100%">
                 </a>
                 <div class="description">MESS-SEGM</div>
+                <div class="description-text">The hub for the Mechanical Engineering Student Society</div>
             </div>
             <div class="website-gallery">
-                <a href="https://uottawampsp.com/"><img src="{{site.baseurl}}/assets/Images/uottawa+mpsp.png" alt="MPSP site" style="width:100%">
+                <a href="https://uottawampsp.com/"><img src="{{site.baseurl}}/assets/Images/uottawa+mpsp.jpg" alt="MPSP site" style="width:100%">
                 </a>
                 <div class="description">uOttawa MPSP</div>
+                <div class="description-text">A site for students aspiring for the opportunity to participate as members of Parliament at the House of Commons</div>
             </div>
             <div class="clearfix"></div>
 
