web design redeisng done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ title: Home
                 <div class="description">35mm</div>
                 <div class="description-text">A photo gallery of travelling through Vietnam </div>
             </div><div class="website-gallery">
-                <a href="https://sprout-pear-z7x6.squarespace.com/"><img src="{{site.baseurl}}/assets/Images/ThatMakerGirl.jpg" alt="ThatMakerGirl" style="width:100%">
+                <a href="https://www.thatmakergirl.ca/"><img src="{{site.baseurl}}/assets/Images/ThatMakerGirl.jpg" alt="ThatMakerGirl" style="width:100%">
                 </a>
                 <div class="description">That Maker Girl</div>
                 <div class="description-text">Storefront bringing local handmade business logos and art ideas to life</div>
