--- a/web-design.html
+++ b/web-design.html
@@ -37,6 +37,10 @@ title: Web Design
                 <td>Can list store products but cannot conduct payment transactions</td>
                 <td>Can list store products and <b>can</b> conduct payments using squarespace</td>
             </tr>
+            <tr>
+                <td>More simple and minimalistic design</td>
+                <td>More slick and modern design</td>
+            </tr>
             <tr class="summary">
                 <td>Summary:<br>Cheap and Fast</td>
                 <td>Summary:<br>Can perform transactions and greater customization by you</td>
