--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@ title: blog
 
 {% include header-blog.html%}
 
+<h1>View our Previous Work</h1>
 <div class="portfolio-page">
     <div class="portfolio-page-post">
         <div class="portfolio-page-image-container">
